<resources>
    <string name="app_name">Euchre</string>

    <string name="login_failed">Login failed</string>
    <string name="invalid_username">Invalid username</string>
    <string name="invalid_password">Invalid password</string>
    <string name="d">D</string>
    <string name="trump">Trump: ?</string>
    <string name="caller">Caller: -</string>
    <string name="your_team_0">Your team: 0</string>
    <string name="other_team_0">Other team: 0</string>
    <string name="p2_hand">p2 hand</string>
    <string name="p2_5">P2: 5</string>
    <string name="p1_hand">p1 hand</string>
    <string name="p1_5">P1: 5</string>
    <string name="p3_hand">p3 hand</string>
    <string name="p3_5">P3: 5</string>
    <string name="heart">♥</string>
    <string name="diamond">♦</string>
    <string name="clubs">♣</string>
    <string name="spades">♠</string>
    <string name="pass">Pass</string>
    <string name="order_up">Order Up</string>
    <string name="continueB">Continue</string>
    <string name="your_hand_of_cards">Your hand of cards</string>
    <string name="thinking">Thinking…</string>
    <string name="callerFinal">Caller: -</string>
    <string name="hand_summary">Hand Summary</string>
    <string name="trumpTV">Trump: ?</string>
    <string name="tricks_us_0_them_0">Tricks - Us: 0 Them: 0</string>
    <string name="points_this_hand_us_0_them_0">Points this hand - Us: 0 Them: 0</string>
    <string name="total_us_0_them_0">Total - Us: 0 Them: 0</string>
    <string name="continueOverlay">Continue</string>
    <string name="game_over">GAME OVER</string>
    <string name="you_won">YOU WON</string>
    <string name="new_game">New Game</string>
    <string name="final_score_us_10_them_7">Final score: Us 10 - Them 7</string>
    <string name="player">Player</string>
    <string name="main_menu">Main Menu</string>
    <string name="euchre">Euchre</string>
    <string name="offline_game">Offline Game</string>
    <string name="profile">Profile</string>
    <string name="match_history">Match History</string>
    <string name="rules">Rules</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="register0">Register</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="welcome_to_euchre">Welcome to Euchre</string>
    <string name="player0">Player</string>
    <string name="win">WIN</string>
    <string name="us_10_them_8">Us 10 - Them 8</string>
    <string name="date">date</string>
    <string name="match_history0">Match History</string>
</resources>
